<resources>
    <string name="app_name">Raincoat</string>
    <string name="image_desc">Image Description\n</string>
    <string name="author">Raincoat Indonesia\n</string>
    <string name="date">19 June 2024</string>
    <string name="description_detail"><![CDATA[Jakarta (ANTARA) - Badan Penanggulangan Bencana Daerah (BPBD) DKI Jakarta mencatat 16 RT mengalami banjir pada Sabtu pukul 06.00 WIB akibat hujan yang melanda sebagian wilayah.\n \n\"BPBD mencatat terjadi kenaikan genangan dari 12 RT menjadi 16 RT atau 0,052 persen dari 30.772 RT yang ada di seluruh DKI Jakarta,\" kata Kepala Pelaksana BPBD DKI Jakarta Isnawa Adji kepada wartawan di Jakarta, Sabtu.]]></string>
    <string name="learn">Learn</string>
    <string name="maps">Maps</string>
    <string name="faq">FAQ</string>
    <string name="location_icon">Location Icon</string>
    <string name="location">Pejaten Timur</string>
    <string name="status_header">High Risk</string>
    <string name="time_updated">Last Updated %1$s</string>
    <string name="description_detail_maps">High chance of heavy rain and strong wind. Beware of flooding.</string>
    <string name="precipitation_levels_number">100</string>
    <string name="precipitation_levels">Precipitation levels</string>
    <string name="wind_speed_numbers">85</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="soil_type">Soil Type</string>
    <string name="soil_type_string">CT</string>
    <string name="question">Lorem ipsum dolor sit amet?</string>
    <string name="answer">Answer</string>
    <string name="subheader">Below are some frequently asked questions (FAQs) about our flood-forecasting platform, Raincoat. These FAQs aim to provide a deeper understanding of the whys and hows behind Raincoat.</string>
    <string name="header_faq">We\'re here to help you!</string>
    <string name="learn_text">Banjar yang menggenangi Jakarta pada waktu sore hari ini menyebabkan…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_maps">Search by Location Name</string>
    <string name="question_faq">Question</string>
    <string name="answer_faq">Answer</string>
    <string name="low_risk">Low Risk of Flooding</string>
    <string name="medium_risk">Medium Risk of Flooding</string>
    <string name="high_risk">High Risk of Flooding</string>
    <string name="very_high_risk">Very High Risk of Flooding</string>
    <string name="unknown_risk">Unknown Risk of Flooding</string>
</resources>