<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.learn.DetailActivity">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/titleArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description_detail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/author"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/date"
            android:textColor="@android:color/darker_gray" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <TextView
                android:id="@+id/text_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_detail" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
