<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_faq"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="8dp" />

        <ImageButton
            android:id="@+id/expandButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/header_faq"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_expand"
            android:background="?attr/selectableItemBackground"
            android:clickable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_faq"
        android:visibility="gone"
        android:padding="8dp" />

</LinearLayout>
